--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-        <img src="./assets/images/logo.png" class="logo" />
+        <img src="./assets/logo/logo.png" class="logo" />
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
