--- a/photographer.html
+++ b/photographer.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <img src="./assets/images/logo.png" class="logo" />
+      <img src="./assets/logo/logo.png" class="logo" />
     </header>
     <main id="main">
       <div class="photograph-header">
