--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="./public/css/main.css" rel="stylesheet" type="text/css" />
+    <link href="./"
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="./assets/favicon/favicon-500x500.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+    <meta name="description" content="Plateforme de photographes freelance unique qui mets a disposition leurs oeuvres, permets de les contacter." />
     <title>Fisheye</title>
   </head>
   <body>
