--- a/photographer.html
+++ b/photographer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="css/main.css" rel="stylesheet" type="text/css" />
+    <link href="./public/css/main.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
     <link rel="icon" type="image/png" href="./assets/favicon/favicon-500x500.png">
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
