--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
-    <meta name="description" content="Plateforme de photographes freelance unique qui mets a disposition leurs oeuvres, permets de les contacter." />
+    <meta name="description" content="plateforme unique de photographers freelance qui permets de montrer leurs oeuvres et les contacter pour des événements ou des tirages." />
     <title>Fisheye</title>
   </head>
 
