Add mixins, variables in sass for css

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="home-header">
       <nav class="home-header__nav">
         <a href="./index.html">
-          <img src="./assets/logo/logo.png" class="logo" />
+          <img class="logo" src="./assets/logo/logo.png" />
         </a>
       </nav>
     
