--- a/photographer.html
+++ b/photographer.html
@@ -10,7 +10,7 @@
   <body>
     <header>
       <a href="./index.html">
-      <img src="./assets/logo/logo.png" class="logo" />
+      <img class="logo" src="./assets/logo/logo.png" />
       </a>
     </header>
     <main id="main">
