Add homepage sass + mixins + variables

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="home-header">
       <nav class="home-header__nav">
         <a href="./index.html">
-          <img class="logo" src="./assets/logo/logo.png" />
+          <img class="logo" src="./assets/logo/logo.png" alt="Fisheye Logo"/>
         </a>
       </nav>
     
