--- a/photographer.html
+++ b/photographer.html
@@ -7,23 +7,28 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye - photographe </title>
   </head>
-  <body>
-    <header>
+
+  <body class="main-wrapper">
+    <header class="homepage-header homepage-header--photographerPage" aria-label="En-tête du site web" aria-hidden="false">
       <a href="./index.html">
       <img class="logo" src="./assets/logo/logo.png" alt="Fisheye Logo" />
       </a>
     </header>
+
     <main id="main">
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
     </main>
+
     <div id="contact_modal">
 			<div class="modal">
+
 				<header>
           <h2>Contactez-moi</h2>
           <img src="./assets/icons/close.svg" onclick="closeModal()" />
         </header>
+
 				<form>
 					<div>
 						<label>Prénom</label>
@@ -31,8 +36,11 @@
 					</div>
           <button class="contact_button">Envoyer</button>
 				</form>
+
 			</div>
 		</div>
+
     <script src="./scripts/utils/contactForm.js"></script>
+
   </body>
 </html>
