Add css navigation + headers in all html

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
   </head>
 
   <body class="main-wrapper">
-    <header class="home-header">
-      <nav class="home-header__nav">
+    <header class="site-header">
+      <nav class="site-header__nav">
         <a href="./index.html">
           <img class="logo" src="./assets/logo/logo.png" alt="Fisheye Logo"/>
         </a>
       </nav>
     
-        <h1 class="home-header__title">Nos photographes</h1>
+        <h1 class="site-header__title">Nos photographes</h1>
     </header>
     
     <main id="main">
