--- a/photographer.html
+++ b/photographer.html
@@ -9,14 +9,13 @@
   </head>
 
   <body class="main-wrapper">
-<<<<<<< HEAD
-    <header class="homepage-header homepage-header--photographerPage" aria-label="En-tête du site web" aria-hidden="false">
-=======
-    <header>
->>>>>>> main
-      <a href="./index.html">
-      <img class="logo" src="./assets/logo/logo.png" alt="Fisheye Logo" />
-      </a>
+
+    <header class="site-header site-header--photographerPage" aria-label="En-tête du site web" aria-hidden="false">
+      <nav class="site-header__nav website-header-nav--photographerPage">
+        <a href="./index.html">
+          <img class="logo" src="./assets/logo/logo.png" alt="Fisheye Logo" />
+        </a>
+      </nav>
     </header>
 
     <main id="main">
