--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         <div class="photographer_section"></div>
     </main>
 
-    <script src="./scripts/factories/photographerFactory.js"></script>
-    <script src="./scripts/pages/index.js"></script>
+    <script type="module" src="./scripts/pages/index.js"></script>
   </body> 
 </html>
