Add homepage css

--- a/index.html
+++ b/index.html
@@ -27,5 +27,10 @@
     </main>
 
     <script type="module" src="./scripts/pages/index.js"></script>
+    <script type="module" src="./scripts/dataManagement/photographers.js"></script>
+    <script type="module" src="./scripts/factories/photographerFactory.js"></script>
+    <script type="module" src="./scripts/media/picture.js"></script>
+    <script type="module" src="./scripts/media/video.js"></script>
+    <script type="module" src="./scripts/utils/visibleAccess.js"></script>
   </body> 
 </html>
