Add function in js to link homepage to the photographers' page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <meta name="description" content="plateforme unique de photographers freelance qui permets de montrer leurs oeuvres et les contacter pour des événements ou des tirages." />
-    <title>Fisheye</title>
+    <title>Fisheye | Accueil</title>
   </head>
 
   <body class="main-wrapper">
@@ -26,7 +26,7 @@
         <div class="photographer_section"></div>
     </main>
 
-    <script type="module" src="./scripts/pages/index.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
   
   </body> 
 </html>
