--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" data-lt-installed="true">
   <head>
     <link href="./public/css/main.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
@@ -26,7 +26,7 @@
         <div class="photographer_section"></div>
     </main>
 
-    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/pages/index.js"></script>
   
   </body> 
 </html>
