--- a/photographer.html
+++ b/photographer.html
@@ -43,7 +43,7 @@
 			</div>
 		</div>
 
-    <script type="module" src="./scripts/photographer.js"></script>
+    <script type="module" src="./scripts/pages/photographer.js"></script>
 
   </body>
 </html>
