Add js HTML banner + media

--- a/photographer.html
+++ b/photographer.html
@@ -18,7 +18,7 @@
       </nav>
     </header>
 
-    <main id="main">
+    <main id="main" aria-hidden="false">
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
