Add media banner file in js

--- a/photographer.html
+++ b/photographer.html
@@ -19,6 +19,8 @@
     </header>
 
     <main id="main" aria-hidden="false">
+      <section class="photographer-banner" aria-label="Info bannière du photographe"></section>
+      
       <div class="photograph-header">
         <button class="contact_button" onclick="displayModal()">Contactez-moi</button>
       </div>
