Add select menu css

--- a/photographer.html
+++ b/photographer.html
@@ -22,11 +22,11 @@
       <section class="photographer-banner" aria-label="Info bannière du photographe">
       </section>
 
-      <form class="select-menu-form" name="select-menu-form" method="get" action="#" novalidate>
-				<p id="select-menu-label" class="select-option-menu__label">Trier par</p>
+      <form class="select-menu" name="select-menu-form" method="get" action="#" novalidate>
+				<p id="select-menu-label" class="select-menu__label">Trier par</p>
 
 				<p class="select-option">
-					<button type="button" id="select-option-trigger" class="select-option__selected-item" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
+					<button type="button" id="select-option__trigger" class="select-option__items" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
 						Popularité
 						<span class="fas fa-chevron-down select-option__arrow"></span>
 					</button>
