--- a/photographer.html
+++ b/photographer.html
@@ -47,6 +47,9 @@
 		<div id="contact-form" class="modal modal--close contact-modal" aria-hidden="true">
 		</div>
 
+    <!-- Icons import -->
+    <script src="https://kit.fontawesome.com/1243262ebe.js" crossorigin="anonymous"></script>
+
     <script type="module" src="./scripts/pages/photographer.js"></script>
 
   </body>
