Add photographer-gallery section css

--- a/photographer.html
+++ b/photographer.html
@@ -41,7 +41,7 @@
 			</aside>
     </main>
 
-    <div id="lightbox" class="modal modal--close" role="dialog" aria-label="lightbox closeup for images" aria-hidden="true">
+    <div id="lightbox" class="modal modal--close" role="dialog" aria-label="lightbox closeup for images and videos portfolio" aria-hidden="true">
 		</div>
 
 		<div id="contact-form" class="modal modal--close contact-modal" aria-hidden="true">
