Add card insert css

--- a/photographer.html
+++ b/photographer.html
@@ -37,7 +37,7 @@
 				<h2 class="sr-container__gallery" id="photographer-gallery__header">Gallerie photos et videos des travaux du photographe</h2>
 			</article>
 
-      <aside class="likes-and-price-container">
+      <aside class="card-insert">
 			</aside>
     </main>
 
