--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         <div class="photographer_section"></div>
     </main>
 
-    <script type="module" src="./scripts/pages/index.js"></script>
+    <!-- JS FILES -->
+    <script type="module" src="./scripts/Pages/Index.js"></script>
   
   </body> 
 </html>
