Add structure cardInsert + mediaCard + Banner in js

--- a/photographer.html
+++ b/photographer.html
@@ -60,6 +60,7 @@
     <script src="./scripts/Constructors/Video.js"></script>
 
     <!-- Pages -->
+    <script src="./scripts/Pages/Index.js"></script>
     <script src="./scripts/Pages/Photographer.js"></script>
 
     <!-- Templates -->
