Fixed display error for github

--- a/photographer.html
+++ b/photographer.html
@@ -74,6 +74,11 @@
 
     <!-- Utils: Entry point -->
     <script src="./scripts/Utils/MediaDirectory.js"></script>
+    <script src="./scripts/Utils/CardInsert.js"></script>
+    <script src="./scripts/Utils/LightBox.js"></script>
+    <script src="./scripts/Utils/SelectMenu.js"></script>
+    <script src="./scripts/Utils/VisibilityAcess.js"></script>
+    <script src="./scripts/Utils/LikeButton.js"></script>
     
 
   </body>
