--- a/photographer.html
+++ b/photographer.html
@@ -60,8 +60,8 @@
     <script src="./scripts/Constructors/Video.js"></script>
 
     <!-- Pages -->
-    <script src="./scripts/Pages/Index.js"></script>
-    <script src="./scripts/Pages/Photographer.js"></script>
+    <script src="./scripts/pages/Index.js"></script>
+    <script src="./scripts/pages/Photographer.js"></script>
 
     <!-- Templates -->
     
@@ -73,12 +73,12 @@
     <script src="./scripts/Api/Apis.js"></script>
 
     <!-- Utils: Entry point -->
-    <script src="./scripts/Utils/MediaDirectory.js"></script>
-    <script src="./scripts/Utils/CardInsert.js"></script>
-    <script src="./scripts/Utils/LightBox.js"></script>
-    <script src="./scripts/Utils/SelectMenu.js"></script>
-    <script src="./scripts/Utils/VisibilityAcess.js"></script>
-    <script src="./scripts/Utils/LikeButton.js"></script>
+    <script src="./scripts/utils/MediaDirectory.js"></script>
+    <script src="./scripts/utils/CardInsert.js"></script>
+    <script src="./scripts/utils/LightBox.js"></script>
+    <script src="./scripts/utils/SelectMenu.js"></script>
+    <script src="./scripts/utils/VisibilityAcess.js"></script>
+    <script src="./scripts/utils/LikeButton.js"></script>
     
 
   </body>
