--- a/photographer.html
+++ b/photographer.html
@@ -51,35 +51,7 @@
     <script src="https://kit.fontawesome.com/1243262ebe.js" crossorigin="anonymous"></script>
 
     <!-- JS FILES -->
-    <!-- Factory -->
-    <script src="./scripts/Factory/MediaFactories.js"></script>
-
-    <!-- Constructors -->
-    <script src="./scripts/Constructors/Photographer.js"></script>
-    <script src="./scripts/Constructors/Picture.js"></script>
-    <script src="./scripts/Constructors/Video.js"></script>
-
-    <!-- Pages -->
-    <script src="./scripts/pages/Index.js"></script>
-    <script src="./scripts/pages/Photographer.js"></script>
-
-    <!-- Templates -->
-    
-    <script src="./scripts/Templates/MediaCard.js"></script>
-    <script src="./scripts/Templates/PhotographerBanner.js"></script>
-
-
-    <!-- Api -->
-    <script src="./scripts/Api/Apis.js"></script>
-
-    <!-- Utils: Entry point -->
-    <script src="./scripts/utils/MediaDirectory.js"></script>
-    <script src="./scripts/utils/CardInsert.js"></script>
-    <script src="./scripts/utils/LightBox.js"></script>
-    <script src="./scripts/utils/SelectMenu.js"></script>
-    <script src="./scripts/utils/VisibilityAcess.js"></script>
-    <script src="./scripts/utils/LikeButton.js"></script>
-    
+    <script type="module" src="./scripts/pages/photographer.js"></script>
 
   </body>
 </html>
