Add js banner and media deck photographer page

--- a/photographer.html
+++ b/photographer.html
@@ -30,7 +30,12 @@
 					</button>
 				</p>
 			</form>
+      
+      <div id="photographer-gallery" class="sr-container">
+			</div>
 
+      <aside class="card-insert">
+			</aside>
     </main>
 
     <div id="lightbox" class="modal modal--close" role="dialog" aria-label="lightbox closeup for images and videos portfolio" aria-hidden="true">
