--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </main>
 
     <!-- JS FILES -->
-    <script type="module" src="./scripts/pages/Index.js"></script>
+    <script type="module" src="./scripts/pages/index.js"></script>
   
   </body> 
 </html>
