--- a/photographer.html
+++ b/photographer.html
@@ -31,8 +31,9 @@
 				</p>
 			</form>
       
-      <div id="photographer-gallery" class="sr-container">
-			</div>
+      <article id="photographer-gallery" class="photographer-gallery sr-container" aria-labelledby="header for photographer's photos and videos gallery">
+        <h2 class="sr-container__gallery" id="photographer-gallery__header">Gallerie photos et videos des travaux du photographe</h2>
+      </article>
 
       <aside class="card-insert">
 			</aside>
