Add entire contents in photographer page
js and scss

--- a/photographer.html
+++ b/photographer.html
@@ -31,12 +31,10 @@
 				</p>
 			</form>
       
-      <article id="photographer-gallery" class="photographer-gallery sr-container" aria-labelledby="header for photographer's photos and videos gallery">
+      <section id="photographer-gallery" class="photographer-gallery sr-container" aria-labelledby="header for photographer's photos and videos gallery">
         <h2 class="sr-container__gallery" id="photographer-gallery__header">Gallerie photos et videos des travaux du photographe</h2>
-      </article>
+      </section>
 
-      <aside class="card-insert">
-			</aside>
     </main>
 
     <div id="lightbox" class="modal modal--close" role="dialog" aria-label="lightbox closeup for images and videos portfolio" aria-hidden="true">
