Add sass for buttons

--- a/photographer.html
+++ b/photographer.html
@@ -23,12 +23,12 @@
       <form class="select-menu" name="select-menu-form" method="get" action="#" novalidate>
 				<label id="select-menu-label" class="select-menu__label">Trier par</label>
 
-				<p class="selected-option">
+				<div class="selected-option">
 					<button type="button" id="selected-option__trigger" class="selected-option__items" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
 						Popularité
 						<span class="fas fa-chevron-down selected-option__arrow"></span>
 					</button>
-				</p>
+				</div>
 			</form>
       
       <section id="photographer-gallery" class="photographer-gallery sr-container" aria-labelledby="header for photographer's photos and videos gallery">
