Add contact form structure and functions in js

--- a/photographer.html
+++ b/photographer.html
@@ -20,6 +20,7 @@
 
     <main id="main" aria-hidden="false">
 
+      <!-- Drop down Menu -->
       <form class="select-menu" name="select-menu-form" method="get" action="#" novalidate>
 				<label id="select-menu-label" class="select-menu__label">Trier par</label>
 
@@ -31,17 +32,20 @@
 				</div>
 			</form>
       
+      <!-- Portfolio Gallery -->
       <section id="photographer-gallery" class="photographer-gallery sr-container" aria-labelledby="header for photographer's photos and videos gallery">
         <h2 class="sr-container__gallery" id="photographer-gallery__header">Gallerie photos et videos des travaux du photographe</h2>
       </section>
 
     </main>
 
+    <!-- Lightbox -->
     <div id="lightbox" class="modal modal--close" role="dialog" aria-label="lightbox closeup for images and videos portfolio" aria-hidden="true">
 		</div>
 
+    <!-- Contact Form -->
 		<div id="contact-form" class="modal modal--close contact-modal" aria-hidden="true">
-		</div>
+    </div>
 
     <!-- Icons import -->
     <script src="https://kit.fontawesome.com/1243262ebe.js" crossorigin="anonymous"></script>
