Add drop down menu css + js

--- a/photographer.html
+++ b/photographer.html
@@ -25,11 +25,11 @@
 				<label id="select-menu-label" class="select-menu__label">Trier par</label>
 
 				<div class="dropDown">
-					<button onclick="DropDown()" type="button" id="button-trigger" class="dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
+					<button onclick="dropDown()" type="button" id="button-trigger" class="dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
 						Popularité
 						<span class="fas fa-chevron-down dropDown__arrow-icon"></span>
 					</button>
-          <div id="DropDown-menu" class="dropDown__content">
+          <div id="myDropDown" class="dropDownMenu">
             <a href="#">Popularité</a>
             <a href="#">Date</a>
             <a href="#">Titre</a>
