--- a/photographer.html
+++ b/photographer.html
@@ -27,7 +27,7 @@
 				<div class="dropDown">
 					<button onclick="myDropDown()" type="button" id="dropDownBtn" class="dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
 						Popularité
-						<span class="fas fa-chevron-down dropDown__arrow-icon"></span>
+						<span class="fas fa-chevron-down arrow-icon rotate"></span>
 					</button>
           <div id="myDropDown" class="dropdown-content">
             <a id="date" href="#">Date</a>
@@ -49,32 +49,48 @@
 
     <!-- Contact Form -->
 		<section id="contact-form" role="dialog" class="modal modal--close contact-modal" aria-hidden="true">
-      <div role="group" class="form-content" aria-labelledby="dialog-headline" tabindex="-1">
-        <header aria-hidden="false" class="form-header">
+      <div id="form-content" role="group" class="form-content" aria-labelledby="dialog-headline" tabindex="-1">
+        <header id="form-title" aria-hidden="false" class="form-header">
           <h2 id="modal-title" class="form-header__heading">
-            Contactez-moi
-          <div id="photographer-name-title"></div>  
+          Contactez-moi
+          <div id="photographer-name"></div>
           </h2>
           <button class="form-header__close" aria-label="Close Contact form" id="close-cross-btn">
-            <img aria-hidden="true" class="contact-button" src="./assets/icons/close.svg" alt="Fermeture de la modale"/>
+              <img aria-hidden="true" class="contact-button" src="./assets/icons/close.svg" alt="Fermeture de la modale"/>
           </button>
-        </header>
-        <form action="#" method="post" id="contactForm" aria-hidden="true" class="contact-form sr-container" novalidate>
+        </header>`
+        <form 
+        onsubmit="return validate();" 
+        action="#" 
+        method="post" 
+        id="contactForm" 
+        aria-hidden="true" 
+        class="contact-form sr-container" 
+        novalidate>
+          <!-- First, Last name, email, message labels and inputs -->
           <div id="contactDataFirstName" class="contactData">
-            <label class="contactData__label">Prénom</label>
-            <input type="text" class="contactData__input" placeholder="Jane" aria-label="First name" id="firstName" required/>
+            <label class="contactData__label" for="firstName-input">Prénom</label>
+            <input name="firstName" type="text" class="contactData__input" placeholder="Jane" aria-label="First name" id="firstName-input" required/>
+            <br>
+            <span id="first_error" class="error"></span>
           </div>
           <div id="contactDataLastName" class="contactData">
-            <label for="last-name" class="contactData__label">Nom</label>
-            <input type="text" class="contactData__input" placeholder="Doe" aria-label="Last name" id="lastName" required/>
+            <label class="contactData__label" for="lastName-input">Nom</label>
+            <input name="lastName" type="text" class="contactData__input" placeholder="Doe" aria-label="Last name" id="lastName-input" required/>
+            <br>
+            <span id="last_error" class="error"></span>
           </div>
           <div id="contactDataEmail" class="contactData contactData__email">
-            <label class="contactData__label">Email</label>
-            <input type="email" class="contactData__input" aria-label="Email" id="email" placeholder="ex. jane.doe@example.com" required/>
+            <label class="contactData__label" for="email-input">Email</label>
+            <input name="email" type="email" class="contactData__input" aria-label="Email" id="email-input" placeholder="ex. jane.doe@example.com" required/>
+            <br>
+            <span id="email_error" class="error"></span>
           </div>
           <div id="contactDataMessage" class="contactData contactData__message">
-            <label class="contactData__label">Votre message</label>
-            <textarea class="text-area" aria-label="Your message" placeholder="Veuillez écrire votre message dans ce champs." id="message" required></textarea>
+            <label class="contactData__label" for="message-input">Votre message</label>
+            <textarea name="message" cols="30" rows="10" class="text-area" aria-label="Your message" placeholder="Veuillez écrire votre message dans ce champs." id="message-input" required></textarea>
+            <br>
+            <span id="message_error" class="error"></span>
           </div>
           <button type="submit" class="button contact-button" id="submit" aria-label="Send" formnovalidate>Envoyer</button>
         </form>
