Add contact form name fetch and like button

--- a/photographer.html
+++ b/photographer.html
@@ -58,7 +58,7 @@
           <button class="form-header__close" aria-label="Close Contact form" id="close-cross-btn">
               <img aria-hidden="true" class="contact-button" src="./assets/icons/close.svg" alt="Fermeture de la modale"/>
           </button>
-        </header>`
+        </header>
         <form 
         action="#" 
         method="post" 
