Add capitals to classes

--- a/photographer.html
+++ b/photographer.html
@@ -30,6 +30,7 @@
 						<span class="fas fa-chevron-down arrow-icon rotate"></span>
 					</button>
           <div id="myDropDown" class="dropdown-content">
+            <a id="popularity" href="#">Popularité</a>
             <a id="date" href="#">Date</a>
             <a id="titre" href="#">Titre</a>
           </div>
