Add like button

--- a/photographer.html
+++ b/photographer.html
@@ -48,6 +48,10 @@
     <div id="lightbox" class="modal modal--close" role="dialog" aria-label="lightbox closeup for images and videos portfolio" aria-hidden="true">
 		</div>
 
+    <!-- Card Info Insert with total likes and Price -->
+    <aside class="card-insert">
+    </aside>
+
     <!-- Contact Form -->
 		<section id="contact-form" role="dialog" class="modal modal--close contact-modal" aria-hidden="true">
       <div id="form-content" role="group" class="form-content" aria-labelledby="dialog-headline" tabindex="-1">
