Add drop down menu in portfolio

--- a/photographer.html
+++ b/photographer.html
@@ -25,14 +25,14 @@
 				<label id="select-menu-label" class="select-menu__label">Trier par</label>
 
 				<div class="dropDown">
-					<button onclick="myDropDown()" type="button" id="dropDownBtn" class="dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
+					<button type="button" id="dropDownBtn" class="dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
 						Popularité
 						<span class="fas fa-chevron-down arrow-icon rotate"></span>
 					</button>
-          <div id="myDropDown" class="dropdown-content">
-            <a id="popularity" href="#">Popularité</a>
-            <a id="date" href="#">Date</a>
-            <a id="titre" href="#">Titre</a>
+          <div id="myDropDown-list" class="dropdown-content">
+            <a class="sort-options" id="popularity" href="#">Popularité</a>
+            <a class="sort-options" id="date" href="#">Date</a>
+            <a class="sort-options" id="titre" href="#">Titre</a>
           </div>
 				</div>
 			</form>
