--- a/photographer.html
+++ b/photographer.html
@@ -3,7 +3,11 @@
   <head>
     <link href="./public/css/main.css" rel="stylesheet" type="text/css" />
     <meta charset="utf-8">
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/favicon/favicon-500x500.png">
+    <!-- Icons import -->
+    <script src="https://kit.fontawesome.com/2698c4b3a8.js" crossorigin="anonymous"></script>
+    <!-- Google fonts import -->
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <title>Fisheye - photographe </title>
   </head>
@@ -25,14 +29,19 @@
 				<label id="select-menu-label" class="select-menu__label">Trier par</label>
 
 				<div class="dropDown">
-					<button type="button" id="dropDownBtn" class="dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
-						Popularité
-						<span class="fas fa-chevron-down arrow-icon rotate"></span>
-					</button>
-          <div id="myDropDown-list" class="dropdown-content">
-            <a class="sort-options" id="popularity" href="#">Popularité</a>
-            <a class="sort-options" id="date" href="#">Date</a>
-            <a class="sort-options" id="titre" href="#">Titre</a>
+          <div class="dropDown__btn-wrapper">
+            <button type="button" role="button" id="dropDownBtn" class="sort-options dropDown__button" aria-haspopup="listbox" aria-expanded="false" aria-labelledby="select-option-label select-option-trigger">
+              Popularité
+            <span class="fas fa-chevron-down arrow-icon"></span>
+            </button>
+          </div>
+          <div id="myDropDownList" role="listbox" class="dropDownList" aria-activedescendant="likes">
+            <button class="sort-options dropDown__button" data-id="likes" aria-label="likes" href="#">
+              Popularité
+            <span class="fas fa-chevron-up arrow-icon"></span>
+            </button> 
+            <button class="sort-options dropDown__button" data-id="date" aria-label="date" href="#">Date</button>
+            <button class="sort-options dropDown__button" data-id="title" aria-label="title" href="#">Titre</button>
           </div>
 				</div>
 			</form>
@@ -100,11 +109,7 @@
       </div>
     </section>
 
-    <!-- Icons import -->
-    <script src="https://kit.fontawesome.com/1243262ebe.js" crossorigin="anonymous"></script>
-
-    <!-- JS FILES -->
+    <!-- JS files integration -->
     <script type="module" src="./scripts/pages/photographer.js"></script>
-    <script type="text/javascript" src="./scripts/utils/dropDown.js"></script>
   </body>
 </html>
